# Diem

./: .babelrc  .gitignore  ARCHITECTURE.md  App.tsx  COLOR_SYSTEM.md  March_2026_Test.ics  RUN_INSTRUCTIONS.md  app.json  babel-post-class-features.cjs  babel.config.cjs  babel.config.js  comprehensive_preview.ics  diem_backup_seed.json  diem_scenario_2.json  lefthook.yml  nitro.json  package-lock.json  package.json  problem.json  sample_events.ics  test_dates.js  test_db.js  test_recurrence.mjs  tsconfig.json  variation_diem_scenario_2.json  vitest.config.ts
.github/workflows/: biome.yml
android/: settings.gradle
android/app/: build.gradle
ios/: Podfile  Podfile.properties.json
ios/Diem/: Info.plist
mdFiles/: Model of the Scheduling Problem.md  Modular Decomposition .md
native-modules/diem-scheduler/: diem-scheduler.podspec  package.json
native-modules/diem-scheduler/android/: build.gradle  gradle.properties  settings.gradle
native-modules/diem-scheduler/android/src/main/cpp/: CMakeLists.txt  cpp-adapter.cpp
native-modules/diem-scheduler/cpp/: DiemScheduler.cpp  DiemScheduler.hpp  diem_ffi.h
native-modules/diem-scheduler/src/: DiemScheduler.nitro.ts  index.ts
patches/: @nozbe+watermelondb+0.25.5.patch
rust/: Cargo.toml  README_demo.md  build-android.sh
rust/examples/: quick_solver_demo.rs  solve_json.rs
rust/src/: lib.rs
rust/src/bridge/: ffi.rs  memory.rs  mod.rs  serialization.rs
rust/src/solver/: candidate_slots.rs  fitness.rs  mod.rs  types.rs
scripts/: backup_cli.mjs  build-rust-ios.sh  build-rust.sh  generate_scenario_2.mjs  generate_seed_backup.mjs  test_solver.ts
src/app/: README.md  index.tsx
src/app/components/: ActivityActionMenu.tsx  ActivityBarRow.tsx  ActivityForm.tsx  ActivityRow.tsx  AddActivityModal.tsx  AddActivitySheet.tsx  AddChoiceModal.tsx  AddScheduledActivityModal.tsx  AddTaskModal.tsx  AdvancedConstraintsSheet.tsx  AuthGate.tsx  BehaviorHeatmap.tsx  BottomNav.tsx  Button.tsx  CategoryHeatmap.tsx  CategoryManager.tsx  CausalNetView.tsx  ConstraintToggle.tsx  DatePickerModal.tsx  Dropdown.tsx  EditActivityModal.tsx  EditTaskModal.tsx  GoalTimeRow.tsx  IconButton.tsx  LogTimeModal.tsx  MonthlyView.tsx  PetriNetView.tsx  PrioritySelector.tsx  ProgressCircle.tsx  TaskRow.tsx  (+9 more)
src/bridge/: index.ts
src/data/: database.native.ts  database.shared.ts  database.ts  schema.ts
src/mining/: index.ts  types.ts
src/types/: domain.ts
tests/l1/: l1_contracts.test.mjs
tests/vitest/: cutover.test.ts  database_scope.test.ts  history_write_service.test.ts  model_to_dto.test.ts  notification_rules.test.ts  problem_builder.test.ts  repositories.integration.test.ts
(+109 files in other folders)
